--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,93 +1,71 @@
 /* Styles for the UISIC Glossary.
-   These styles are included locally so that this page will still present OK when 
-   downloaded without the normal UISIC stylesheet. */
+   These styles are included locally so that this page will still display
+   the same when downloaded. */
 
 body {
-	margin: 0px 10% 0px 10%; 
-	background-color: #F5F5F5;
-	font-family: arial, helvetica, sans-serif; 
-	font-size: large;
+  margin: 0px 10% 0px 10%; 
+  background-color: #F5F5F5;
+  font-family: arial, helvetica, sans-serif; 
+  font-size: large;
 }
-h1,h2,h3,h4,h5,h6 {
-	color: #E65C00;
-	text-align: left;
-}
-h1 {
-	text-align: center;
-	font-size: 1.8em;
-}
+h1 { text-align: center; font-size: 1.8em; }
+h1,h2,h3,h4,h5,h6 { color: #E65C00; text-align: left; }
 .center { text-align: center;}
 .headSuperText {
-	font-size: 1em;
-	font-weight: normal;
-	text-align: center;
-	margin: 1em 0em;
+  font-size: 1em;
+  font-weight: normal;
+  text-align: center;
+  margin: 1em 0em;
 }
 .headSubText {
-	font-size: 1em;
-	font-style: italic;
-	font-weight: normal;
-	text-align: center;
-	margin-bottom: 2em;
-	margin-top: 0em;
+  font-size: 1em;
+  font-style: italic;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: 2em;
+  margin-top: 0em;
 }
 .footer {
-	clear: both;
-	text-align: left;
-	padding: 1em 0em;
-	font-size: 0.8em;
-	font-style: italic;
-	font-weight: normal;
+  clear: both;
+  text-align: left;
+  padding: 1em 0em;
+  font-size: 0.8em;
+  font-style: italic;
+  font-weight: normal;
 }
 .date-header {
-	text-align: center;
-	font-style: italic;
-	font-weight: lighter;
-	font-size: 0.9em;
+  text-align: center;
+  font-style: italic;
+  font-weight: lighter;
+  font-size: 0.9em;
 }
 .date-footer {
-	text-align: left;
-	font-style: normal;
-	font-weight: normal;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
 }
 /* For small horizontal menu strips */
 .menuhoriz {
-	margin: 0.4em 0px;
-	font-size: .8em;
-	text-align: center;
+  margin: 0.4em 0px;
+  font-size: .8em;
+  text-align: center;
 }
 .menuhoriz a {
-	color: #E65C00 ;
-	text-decoration: none;
-	font-weight: bold;
+  color: #E65C00 ;
+  text-decoration: none;
+  font-weight: bold;
 }
-table {
-	table-layout: fixed;		<!-- speeds up displaying the start of a long table -->
-}
-table, th, td { 
-	border: 1px solid black;
-	border-collapse: collapse;
-}
-td {
-	vertical-align: top;
-	padding: 0.4em;
-}
-td:first-child {
-	text-align: center;
-	width: 9%;
-}
-th { 
-	background-color: lightgrey; 
-}
-tr:nth-child(even) {
-	background-color: lightgrey;
-}
+/* Using layout:fixed speeds up displaying the start of a long table */
+table { table-layout: fixed; }
+table, th, td { border: 1px solid black; border-collapse: collapse; }
+td { vertical-align: top; padding: 0.4em; }
+td:first-child { text-align: center; width: 9%; }
+th { background-color: lightgrey; }
+tr:nth-child(even) { background-color: lightgrey; }
 .equation {
-	border: none;
-	text-align: center;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
+  border: none;
+  text-align: center;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
-sub,sup {
-	font-size: 0.8em;
-}
+sub,sup { font-size: 0.8em; }
